# sdlc-template-public

./: .env.example  .gitignore  AGENTS.md  Dockerfile.hud  GUIDE.md  README.md  clone_repos.py  env.py  pyproject.toml  repo_config.yaml  sdlc_scripts.py
data/eval_reward_task/hud_python_github_data/: issues.json  repo.json  user.json
data/eval_reward_task/hud_python_linear_data/: issues.json  workflow_states.json
data/github_linear_task/github_data/: issues.json  repo.json
data/github_linear_task/linear_data/: issues.json  labels.json  teams.json
data/notification_bug_task/notif_github_data/: issues.json  repo.json
data/notification_bug_task/notif_linear_data/: issues.json  labels.json  teams.json
data/openai_schema_task/hud_python_github_data/: issues.json  repo.json
data/openai_schema_task/hud_python_linear_data/: issues.json  labels.json  teams.json  users.json
data/order_pricing_task/order_github_data/: issues.json  repo.json  user.json
data/order_pricing_task/order_linear_data/: issues.json  labels.json  teams.json  users.json  workflow_states.json
docs/: deploy-and-run.md  github-mcp.md  linear-mcp.md
tasks/: __init__.py
tasks/agentic_grader_test/: golden.patch  task.py
tasks/basic/: task.py
tasks/eval_reward/: golden.patch  task.py
tasks/github_linear/: task.py
tasks/notification_bug/: task.py
tasks/openai_schema/: task.py
tasks/order_pricing/: __init__.py  task.py
tasks/sentry_triage/: golden.patch  task.py
tasks/settings_bug/: task.py
tasks/settings_v2/: task.py
tasks/webhook_bug/: golden.patch  task.py
(+30 files in other folders)
